--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                 <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
                             </div>
                             <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">EMail</a>
+                                <a class="button button-primary button-block button-shadow" href="#">Get Access</a>
                             </div>
                         </div>
                     </div>
