--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
                             </div> -->
                             <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Unit 1 Quiz</a>
+                                <a class="button button-primary button-block button-shadow" href="..\Information Processing Cycle (Published)\ICT.html">Unit 1 Quiz</a>
                             </div>
                             <div class="control">
                                 <a class="button button-primary button-block button-shadow" href="#">Unit 2 Quiz</a>
