--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="container-sm">
                     <div class="newsletter-inner section-inner">
                         <div class="newsletter-header text-center is-revealing">
-                            <h2 class="section-title mt-0">Stay in the know</h2>
+                            <h2 class="section-title mt-0">Up Your Game!</h2>
                             <p class="section-paragraph">Join the EBS 168 Google Classroom</p>
                         </div>
                         <div class="footer-form newsletter-form field field-grouped is-revealing">
