--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                         </div>
                         <div class="footer-form newsletter-form field field-grouped is-revealing">
                             <div class="control control-expanded">
-                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
+                                <input class="input" type="email" name="email" placeholder="Your email&hellip;">
                             </div>
                             <div class="control">
                                 <a class="button button-primary button-block button-shadow" href="#">Get Access</a>
