--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="hero-inner">
                         <h1 class="hero-title h2-mobile mt-0 is-revealing">EBS 168 - Learning Theories</h1>
                         <p class="hero-paragraph is-revealing">Welcome to the EBS 168 Class page.</p>
-                        <p class="hero-paragraph is-revealing">Facilitator: <br\> Patrick Biney Amissah</p>
+                        <p class="hero-paragraph is-revealing">Facilitator: <br> Patrick Biney Amissah</p>
                         <p class="hero-paragraph is-revealing">...</p>
                         <div class="hero-form newsletter-form field field-grouped is-revealing">
                             <!-- <div class="control control-expanded">
