--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                                 <a class="button button-primary button-block button-shadow" href="ICTq/ICT.html">Unit 1 Quiz</a>
                             </div>
                             <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Unit 2 Quiz</a>
+                                <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 2 Quiz</a>
                             </div>
                             <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Unit 3 Quiz</a>
+                                <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 3 Quiz</a>
                             </div>
 
                         </div>
@@ -225,13 +225,13 @@
             <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
         </div> -->
                     <div class="control">
-                        <a class="button button-primary button-block button-shadow" href="#">Unit 4 Quiz</a>
+                        <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 4 Quiz</a>
                     </div>
                     <div class="control">
-                        <a class="button button-primary button-block button-shadow" href="#">Unit 5 Quiz</a>
+                        <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 5 Quiz</a>
                     </div>
                     <div class="control">
-                        <a class="button button-primary button-block button-shadow" href="#">Unit 6 Quiz</a>
+                        <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 6 Quiz</a>
                     </div>
 
                 </div>
