--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
                             </div> -->
                             <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="ICTq/ICT.html">Unit 1 Quiz</a>
+                                <a class="button button-primary button-block button-shadow" href="ICTq/ICT.html" target="_blank">Unit 1 Quiz</a>
                             </div>
                             <div class="control">
                                 <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 2 Quiz</a>
