--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                                 <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
                             </div> -->
                             <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="ICTq/ICT.html" target="_blank">Unit 1 Quiz</a>
+                                <a class="button button-primary button-block button-shadow" href="EBS168_PQu123/ebs168_u1_2_3.html" target="_blank">Unit 1-3 Quiz</a>
                             </div>
-                            <div class="control">
+                           <!-- <div class="control">
                                 <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 2 Quiz</a>
                             </div>
                             <div class="control">
                                 <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 3 Quiz</a>
-                            </div>
+                            </div> -->
 
                         </div>
 
