--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                             <!-- <div class="control control-expanded">
                                 <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
                             </div> -->
-                            <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="EBS168_PQu123/ebs168_u1_2_3.html" target="_blank">Unit 1-3 Quiz</a>
+                            <div class="control" style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+                                <a class="button button-primary button-block button-shadow" href="EBS168_PQu123/ebs168_u1_2_3.html" target="_blank" title="Click to take the Unit 1-3 Quiz">Unit 1-3 Quiz</a>
                             </div>
                            <!-- <div class="control">
                                 <a class="button button-primary button-block button-shadow" href="cmsoon.html">Unit 2 Quiz</a>
