--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@
                             <h2 class="section-title mt-0">Up Your Game!</h2>
                             <p class="section-paragraph">Join the EBS 168 Google Classroom</p>
                         </div>
-                        <div class="footer-form newsletter-form field field-grouped is-revealing">
+                        <!-- <div class="footer-form newsletter-form field field-grouped is-revealing">
                             <div class="control control-expanded">
                                 <input class="input" type="email" name="email" placeholder="Your email&hellip;">
                             </div>
                             <div class="control">
                                 <a class="button button-primary button-block button-shadow" href="#">Get Access</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
