--- a/cmsoon.html
+++ b/cmsoon.html
@@ -16,7 +16,7 @@
         .container {
             text-align: center;
             background-color: #838dea;
-            padding: 20px;
+            padding: 15px;
             border-radius: 30px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
@@ -24,13 +24,13 @@
         .containers {
             text-align: center;
             background-color: #f6f8fa;
-            padding: 50px;
-            border-radius: 25px;
+            padding: 8vh;
+            border-radius: 30px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
 
         h1 {
-            font-size: 45px;
+            font-size: 35px;
             color: #f6f8fa;
             text-align: center;
         }
